--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,25 +17,18 @@
     src: aurora-agent.lic
     dest: 'c:\aurora'
 
-# not find a better way for the dashboard :)
-# get an error with --dashboard option
+- name: Build aurora install command
+  ansible.builtin.set_fact:
+    aurora_install_cmd: >-
+      aurora-agent-64.exe --install
+      -c agent-config-{{ ludus_aurora_config_preset }}.yml
+      {{ '--dashboard' if ludus_aurora_dashboard else '' }}
+      {{ ('--json --logfile "' + ludus_aurora_log_path + '"') if ludus_aurora_json_logging else '' }}
+
 - name: Install aurora
   ansible.windows.win_command:
-    cmd: 'C:\aurora\aurora-agent-64.exe --install'
-
-- name: Copy Dashboard
-  ansible.windows.win_copy:
-    src: 'C:\aurora\tools'
-    dest: 'C:\Program Files\Aurora-Agent'
-    remote_src: true
-  when: ludus_aurora_dashboard
-
-- name: Add dashboard Run RegKey
-  ansible.windows.win_regedit:
-    path: 'HKLM:\SOFTWARE\Microsoft\windows\CurrentVersion\Run'
-    name: aurora-dashboard
-    data: 'C:\Program Files\Aurora-Agent\tools\aurora-dashboard.exe'
-  when: ludus_aurora_dashboard
+    cmd: '{{ aurora_install_cmd }}'
+    chdir: 'C:\aurora'
 
 - name: clean folder
   ansible.windows.win_file:
